fixed wrap icone

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background: linear-gradient(to top, rgb(220, 219, 210) 90%,rgb(63, 148, 136) 90% 10%);
+    background: linear-gradient(to top, #d2dbdb 90%,rgb(63, 148, 136) 90% 10%);
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -54,8 +54,12 @@ body{
     margin-right: 10px;
 }
 
+.icons{
+    min-width: 100px;
+}
+
 .icons i{
-    margin-right: 15px;
+    padding:5px;
     color: #b1b1b1;
     font-size: 18px;
     cursor: pointer;
@@ -70,7 +74,7 @@ body{
     max-height: 65px;
     background-color: #8edafc;
     padding: 10px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .bell{
@@ -81,15 +85,21 @@ body{
     margin-right: 10px;
     justify-content: center;
     align-items: center;
+    
+    
 }
 
 .bell i{
     color: #8edafc;
 }
 
+.titleBell{
+    font-size: 14px;
+}
+
 .textBell a {
     color: #e9ebeb;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .search{
@@ -146,6 +156,7 @@ body{
     display: flex;
     align-items: center;
     padding: 10px;
+    background-color: rgb(240, 234, 230);
 }
 
 .sentMessage i {
@@ -171,7 +182,6 @@ body{
 }
 
 .sent{
-    
     justify-content: flex-end;
 }
 
